--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-22 11:17:14
+lastsearch = 2024-07-22 13:36:52
 
 [www.instagram.com]
 match = -161.5%%
@@ -34,7 +34,7 @@ url = https://www.linklaters.com/en-us/sitemap
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Catherine_Dior
+url = https://en.wikipedia.org/wiki/Dior
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -302,7 +302,7 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
