--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-22 13:23:40
+lastsearch = 2024-07-22 13:38:16
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = List of cities in Vietnam
 url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
-match = -43.5%%
-title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqYafQZG&sig=ACfU3U0NS4TvEI0I0ixb6hkDYZjy_8hgrQ&hl=en&sa=X&ved=2ahUKEwj9rrCwgbqHAxWSkokEHQPXC30Q6AF6BAgxEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1Uf7a_y&sig=ACfU3U0v4JM63LV06TFaWpjRrxIeNjcTJw&hl=en&sa=X&ved=2ahUKEwjbzIjShLqHAxVHkokEHVaeDHcQ6AF6BAgsEAM
 
 [www.travelweekly.com]
 match = -87.0%%
