--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-22 05:31:16
+lastsearch = 2024-07-22 13:45:51
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
-match = -85.7%%
-title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
-url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
+match = -95.2%%
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
+url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [cau-ca.com]
 match = -42.9%%
