--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-22 11:16:18
+lastsearch = 2024-07-22 13:44:04
 
 [www.lazada.vn]
 match = -212.5%%
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -81.2%%
-title = בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/album/-
+match = -225.0%%
+title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/track/ave-maria
 
 [demxanh.com]
 match = -181.2%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/
+url = https://www.facebook.com/diepxuanco/?locale=lv_LV
 
 [extenzee.com]
 match = -262.5%%
@@ -177,9 +177,9 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -31.2%%
-title = checked bag policy delta
-url = https://mechanicaldesign-job.com/products/tqqvnqki-195/
+match = -200.0%%
+title = new rolex yachtmaster - rolex yacht master price new ...
+url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.instagram.com]
 match = -237.5%%
