--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-22 13:18:50
+lastsearch = 2024-07-22 14:16:43
 
 [anlacphat.com]
 match = -118.8%%
-title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
-url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
+title = Đèn Led Chiếu Điểm Thanh Ray DIA808 7W Duhal
+url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia808-7w-duhal/
 
 [thacoanlac.vn]
-match = -55.6%%
-title = FD990-4WD
-url = https://thacoanlac.vn/forland-fd990-4wd
+match = -180.0%%
+title = FD990
+url = https://thacoanlac.vn/forland-fd900
 
 [vietnamese.alibaba.com]
 match = -256.2%%
@@ -57,9 +57,9 @@ title = Y tế 100%% gạc hình gối bằng vải cotton 90X100
 url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-Shaped-Gauze-Swab-90X100_ysrhnrrigg.html
 
 [www.diepxuan.com]
-match = -68.8%%
-title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
+match = 37.5%%
+title = Điệp Xuân Chiếu lác 90x100
+url = https://www.diepxuan.com/chieu-lac-90x100.html
 
 [www.thietbihiepphat.com]
 match = -43.8%%
@@ -67,9 +67,9 @@ title = Đầu Dò Nhiệt Độ Loại K, T, NTC
 url = http://www.thietbihiepphat.com/san-pham/dau-do-nhiet-do-loai-k-t-ntc-711.html
 
 [www.facebook.com]
-match = -44.4%%
-title = Kho đồ gỗ
-url = https://www.facebook.com/khodogovk/
+match = -18.8%%
+title = Shop Bé Cưng | Can Giuoc
+url = https://www.facebook.com/Shopbecung030618/
 
 [thietbiphantich.vn]
 match = -193.8%%
@@ -105,4 +105,9 @@ url = https://docuabeyeu.com/san-pham/xe-choi-chan-lap-ghep-yh-8810-1/
 match = -6.2%%
 title = Ống thủy tinh phi 18
 url = https://dangtai.com.vn/san-pham/ong-thuy-tinh-phi-18-2458.html
+
+[binhdinh.gov.vn]
+match = -650.0%%
+title = PL
+url = https://binhdinh.gov.vn/upload/2005340/20221213/PL_diem_giao_nhan_2676b.pdf
 
