--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-22 13:47:51
+lastsearch = 2024-07-22 14:19:29
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -57.1%%
-title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
+match = 19.0%%
+title = Đệm Bông Ép Everhome Vỏ Cotton
+url = https://demviethome.vn/dem-bong-ep-everhome-vo-cotton/
 
 [www.tiktok.com]
 match = -95.2%%
@@ -122,9 +122,9 @@ title = DS No gui Cong BHXH T7.2022.xlsx
 url = https://hanoi.baohiemxahoi.gov.vn/content/tintuc/Lists/News/Attachments/31604/DS No gui Cong BHXH T7.2022.pdf
 
 [www.amazon.com]
-match = -52.4%%
-title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
+match = 25.0%%
+title = Everhome Designs
+url = https://www.amazon.com/Everhome-Designs/s?k=Everhome+Designs
 
 [core.ac.uk]
 match = -4.8%%
