--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-22 06:31:50
+lastsearch = 2024-07-22 14:19:20
 
 [www.riotgames.com]
 match = -84.0%%
@@ -17,9 +17,9 @@ title =
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -68.0%%
-title = 🇩🇪 German nee ❌ vs 🇰🇷 Korean 네 ne ✅ | Language Rant pt ...
-url = https://www.youtube.com/watch?v=bUW-Th-vPOw
+match = -48.0%%
+title = MN D90 Crawler 1/12 Wish german unboxing # 94
+url = https://www.youtube.com/watch?v=cnpx6vFDAqU
 
 [www.diepxuan.com]
 match = 60.0%%
