--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-22 11:45:29
+lastsearch = 2024-07-22 14:19:40
 
 [www.sendo.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Thảm Xốp Lót Sàn - BỘ gồm 18 MIẾNG
 url = https://www.lazada.vn/products/tham-xop-lot-san-bo-gom-18mieng-i1865380749.html
 
 [tayphuthuan.com]
-match = -336.4%%
-title = Thảm xốp lót sàn khu vui chơi 10ly,16ly,18ly,20ly,26ly | Ca
-url = http://tayphuthuan.com/san-pham/tham-xop-lot-san-khu-vui-choi-295/
+match = -154.5%%
+title = Thảm xốp lót sàn nhà bóng cho bé chơi
+url = http://tayphuthuan.com/san-pham/tham-xop-lot-san-nha-778.html
 
 [h5.lazada.vn]
 match = -72.7%%
