--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-22 10:20:49
+lastsearch = 2024-07-22 14:45:41
 
 [shopee.vn]
 match = -162.5%%
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -187.5%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
+match = -175.0%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
