--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-22 11:38:02
+lastsearch = 2024-07-22 14:48:00
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -122,9 +122,9 @@ title = Lịch Chiếu Tại Rạp Phim Dcine
 url = https://www.dcine.vn/lich-chieu/dcine-quy-nhon-3.html
 
 [m.facebook.com]
-match = -125.0%%
-title = SĂN TOUR - COMBO DU LỊCH GIÁ RẺ SALE GIỜ CHÓT
-url = https://m.facebook.com/groups/374424207463060/posts/849517706620372/
+match = -66.7%%
+title = Kenh14.vn
+url = https://m.facebook.com/100064530256741/photos/893845009443166/
 
 [kinhte.congthuong.vn]
 match = -218.8%%
