--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-22 08:02:35
+lastsearch = 2024-07-22 14:44:14
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -585,4 +585,9 @@ url = https://archive.registrar.ufl.edu/catalog/catalogarchive/99-00-catalog/cou
 match = -72.7%%
 title = Exiting war
 url = https://www.pfp-consortium.org/media/271/download
+
+[analogue-hobbies.blogspot.com]
+match = -87.0%%
+title = From FranL: 15mm Modern North Korean Infantry, Armour ...
+url = http://analogue-hobbies.blogspot.com/2013/12/from-franl-15mm-modern-north-korean.html
 
