--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-22 14:47:29
+lastsearch = 2024-07-22 15:37:27
 
 [shopee.vn]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Set chiếu điều hòa Hermon kèm gối HK2212 - Honper NK
 url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 
 [vtvhyundai.vn]
-match = -24.0%%
-title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+match = -8.0%%
+title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
 
 [voicon.net]
 match = 60.0%%
@@ -42,9 +42,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = -20.0%%
-title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
+match = 16.0%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [goni.vn]
 match = 8.0%%
@@ -85,4 +85,9 @@ url = https://chieutrelanlan.com/chieu-may-dieu-hoa-3-D-p18.html
 match = 12.0%%
 title = Chiếu Điều Hoà Cao Su Non Tặng Kèm Gối Cho Bé
 url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
+
+[foreverbedding.net]
+match = 40.0%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
