--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-22 14:52:03
+lastsearch = 2024-07-22 15:41:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đ
 url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 
 [demxanh.com]
-match = -87.0%%
-title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
+match = -30.4%%
+title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
+url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = -21.4%%
-title = TIN TRONG NƯỚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
+match = 0.0%%
+title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
 
 [shopee.vn]
 match = -43.5%%
@@ -425,4 +425,9 @@ url = https://www.5giay.vn/threads/chieu-truc-viet-nam-gia-re.8437156/
 match = -78.3%%
 title = Cứu sống người đàn ông bị rơi xuống vực trong rừng
 url = https://baolaichau.vn/xã-hội/cứu-sống-người-đàn-ông-bị-rơi-xuống-vực-trong-rừng
+
+[chieutruccaobang.com.vn]
+match = 47.4%%
+title = Chiếu trúc Cao Bằng
+url = http://chieutruccaobang.com.vn/
 
