--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-22 14:12:30
+lastsearch = 2024-07-22 15:41:49
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -12,9 +12,9 @@ title = Thắng Lợi
 url = https://maythangloi.com.vn/
 
 [nemxinh.net]
-match = -77.8%%
-title = Thắng Lợi
-url = http://nemxinh.net/thuong-hieu/thang-loi
+match = -110.0%%
+title = Bộ ga chun
+url = http://nemxinh.net/bo-ga-chun-cp208.html
 
 [shopee.vn]
 match = -84.0%%
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -64.0%%
-title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
+match = -44.0%%
+title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ga trải giường thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 0.0%%
-title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+match = -8.0%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [www.lazada.vn]
 match = 0.0%%
