--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-22 14:46:24
+lastsearch = 2024-07-22 15:36:21
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -990,4 +990,9 @@ url = https://www.versace.com/us/en/
 match = -213.3%%
 title = FOX 13 Utah and Salt Lake City: Breaking News, Weather ...
 url = https://www.fox13now.com/
+
+[www.kwch.com]
+match = -173.3%%
+title = KWCH | Local News, Weather, Sports | Wichita, KS
+url = https://www.kwch.com/
 
