--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-22 14:51:32
+lastsearch = 2024-07-22 15:39:26
 
 [hanvico.net.vn]
 match = -10.5%%
@@ -13,8 +13,8 @@ url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
-title = Ruột gối lông vũ cao cấp 45*65
-url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-1
+title = Ruột gối lông vũ cao cấp 50*70
+url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-50-70
 
 [antbedding.com]
 match = 78.9%%
@@ -57,9 +57,9 @@ title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
 url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
-match = -110.5%%
-title = Ruột gối nằm lông vũ nhân tạo Microfiber, gối siêu êm ...
-url = https://shopee.vn/Ruột-gối-nằm-lông-vũ-nhân-tạo-Microfiber-gối-siêu-êm-mềm-chuẩn-KS-5-sao-giá-dùng-thử-hấp-dẫn-i.15141865.3037316529
+match = -131.6%%
+title = Ruột gối lông vũ tự nhiên kích thước 50x70cm và ruột ôm ...
+url = https://shopee.vn/Ruột-gối-lông-vũ-tự-nhiên-kích-thước-50x70cm-và-ruột-ôm-35*100-cap-cấp.-i.26028938.22508779967
 
 [demgiare.net]
 match = 0.0%%
